--- a/remote-host-deploy.yaml
+++ b/remote-host-deploy.yaml
@@ -13,8 +13,11 @@ spec:
         - containerPort: 22
       volumeMounts:
         - name: remote-host-script
-          mountPath: "/home/jenkins/wp-data-files/avangels-db-backup-s3.sh"
-          subPath: avangels-db-backup-s3.sh
+          mountPath: "/home/jenkins/wp-data-files/my-wp-db-backup-s3"
+          subPath: my-wp-db-backup-s3.sh
+        - name: remote-host-tmp
+          mountPath: "/tmp
+
   volumes:
     - name: remote-host-script
       persistentVolumeClaim:
